@@ -1,51 +1,37 @@
 package br.com.api.flow.product.item;
 
-import static br.com.api.exceptions.FindByFilterExceptionEnum.MORE_THAN_ONE_REGISTER_FOUND;
-
-import java.lang.reflect.InvocationTargetException;
-import java.util.List;
+import java.util.stream.Collectors;
 
 import org.springframework.beans.factory.annotation.Autowired;
-import org.springframework.data.domain.Page;
+import org.springframework.data.domain.Example;
 import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Component;
 
 import br.com.api.converter.ProductMapper;
 import br.com.api.entity.Product;
 import br.com.api.entity.repository.ProductFilter;
-import br.com.api.entity.repository.ProductRepositoryImpl;
-import br.com.api.exceptions.FindByFilterException;
+import br.com.api.entity.repository.ProductRepository;
+import lombok.var;
 
 @Component
 public class FindProductByFilterFlowItem {
 
 	@Autowired
-	private ProductRepositoryImpl productRepositoryImpl;
+	private ProductRepository productRepository;
 
 	@Autowired
 	private ProductMapper productMapper;
 
-	public ProductFilter findByFilter(ProductFilter filter)
-			throws FindByFilterException, NoSuchMethodException, SecurityException, IllegalArgumentException,
-			IllegalAccessException, InvocationTargetException, InstantiationException {
+	public ProductFilter findByFilter(ProductFilter filter) {
 
-		if (Boolean.TRUE.equals(filter.getPageable())) {
-			Page<Product> entities = productRepositoryImpl.findByFilter(filter,
-					PageRequest.of(filter.getCurrentPage(), filter.getSizePage()));
-
-			filter.setResult(entities.map(entity -> productMapper.toDTO(entity)).toList());
-			filter.setTotal(Math.toIntExact(entities.getTotalElements()));
-			filter.setTotalPages(Math.toIntExact(entities.getTotalPages()));
-			filter.setLast(entities.isLast());
-		} else {
-			List<Product> entities = productRepositoryImpl.findByFilter(filter);
-			filter.setResult(entities.stream().map(entity -> productMapper.toDTO(entity)).toList());			
+		Example<Product> example = Example.of(productMapper.toEntity(filter.getExample()));
+		if (Boolean.TRUE.equals(filter.getPageable())) {			
+			final var ret = productRepository.findAll(example, PageRequest.of(filter.getCurrentPage(), filter.getSizePage()));
+			filter.setResult(ret.stream().map(p -> productMapper.toDTO(p)).collect(Collectors.toList()));
+			return filter;
 		}
-
-		if (Boolean.TRUE.equals(filter.getResultUnique()) && filter.getResult().size() > 1) {
-			throw new FindByFilterException(MORE_THAN_ONE_REGISTER_FOUND);
-		}
-
+		final var ret = productRepository.findAll(example);
+		filter.setResult(ret.stream().map(p -> productMapper.toDTO(p)).collect(Collectors.toList()));
 		return filter;
 	}
 }
